<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/dark_green"
    tools:context=".MoveResultActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_quote"
        android:layout_marginTop="150dp"
        android:textSize="38sp"
        android:fontFamily="cursive"
        android:textStyle="bold"
        android:textColor="@color/white"
       android:gravity="center"/>
    <RadioGroup
        android:id="@+id/rg_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/glory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/glory"/>
        <RadioButton
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/lifeChoice"/>
        <RadioButton
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/time"/>
        <RadioButton
            android:id="@+id/success"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/success"/>
    </RadioGroup>
    <Button
        android:id="@+id/button_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:textStyle="italic"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:layout_marginTop="50dp"
        android:text="@string/choose"/>
</LinearLayout>